TrialoftheTitansPackage/main/default/objects/Exam_Pool_Assignment__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipName>Exam_Pools</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>