TrialoftheTitansPackage/main/default/objects/Exam_Pool_Assignment__c/fields/Number_to_pull__c.field-meta.xml
<CustomField>
    <fullName>Number_to_pull__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number to pull</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>