TrialoftheTitansPackage/main/default/objects/Exam_Pool_Assignment__c/fields/Question_Pool__c.field-meta.xml
<CustomField>
    <fullName>Question_Pool__c</fullName>
    <label>Question Pool</label>
    <referenceTo>Question_Pool__c</referenceTo>
    <relationshipName>Exam_Pools</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>